azureps-cmdlets-docs/ResourceManager/AzureRM.HDInsight/v0.9.8/AzureRM.HDInsight.md
---
Module Name: AzureRM.HDInsight
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
ms.assetid: 20ABA20B-328C-4BAB-8C47-44F1A3B611B4
---

# AzureRM.HDInsight Module
## Description
The topics in this section document the Azure PowerShell cmdlets for Azure HDInsight in the Azure Resource Manager (ARM) framework. These cmdlets are used to manage HDInsight clusters and the jobs that run on them. The cmdlets exist in the Microsoft.Azure.Commands.HDInsight namespace.

## AzureRM.HDInsight Cmdlets
### [Add-AzureHDInsightConfigValues](./Add-AzureHDInsightConfigValues.md)
Adds custom configuration values to a cluster configuration object.


### [Add-AzureHDInsightMetastore](./Add-AzureHDInsightMetastore.md)
Adds a Hive or Oozie metastore to a cluster configuration object.


### [Add-AzureHDInsightScriptAction](./Add-AzureHDInsightScriptAction.md)
Adds a script action to a cluster configuration object.


### [Add-AzureHDInsightStorage](./Add-AzureHDInsightStorage.md)
Adds an Azure Storage key to a cluster configuration object.


### [Get-AzureHDInsightCluster](./Get-AzureHDInsightCluster.md)
Gets and lists all of the Azure HDInsight clusters associated with the current subscription or a specified resource group, or retrieves a specific cluster.


### [Get-AzureHDInsightJobOutput](./Get-AzureHDInsightJobOutput.md)
Gets the log output for a job from the storage account associated with a specified cluster.


### [Get-AzureHDInsightJob](./Get-AzureHDInsightJob.md)
Gets the list of jobs from a cluster and lists them in reverse chronological order, or retrieves a specific job.


### [Get-AzureHDInsightProperties](./Get-AzureHDInsightProperties.md)
Gets properties about the HDInsight service, such as available locations and capacity.


### [Grant-AzureHDInsightHttpServicesAccess](./Grant-AzureHDInsightHttpServicesAccess.md)
Grants HTTP access to a cluster.


### [Grant-AzureHDInsightRdpServicesAccess](./Grant-AzureHDInsightRdpServicesAccess.md)
Grants RDP access to a cluster.


### [Invoke-AzureHDInsightHiveJob](./Invoke-AzureHDInsightHiveJob.md)
Submits Hive queries to a cluster.


### [New-AzureHDInsightClusterConfig](./New-AzureHDInsightClusterConfig.md)
Creates a non-persisted cluster configuration object that describes an Azure HDInsight cluster configuration.


### [New-AzureHDInsightCluster](./New-AzureHDInsightCluster.md)
Creates an Azure HDInsight cluster in the specified resource group for the current subscription.


### [New-AzureHDInsightHiveJobDefinition](./New-AzureHDInsightHiveJobDefinition.md)
Creates a Hive job object.


### [New-AzureHDInsightMapReduceJobDefinition](./New-AzureHDInsightMapReduceJobDefinition.md)
Creates a MapReduce job object.


### [New-AzureHDInsightPigJobDefinition](./New-AzureHDInsightPigJobDefinition.md)
Creates a pig job object.


### [New-AzureHDInsightStreamingMapReduceJobDefinition](./New-AzureHDInsightStreamingMapReduceJobDefinition.md)
Creates a Streaming MapReduce job object.


### [Remove-AzureHDInsightCluster](./Remove-AzureHDInsightCluster.md)
Deletes the specified HDInsight cluster from the current subscription.


### [Revoke-AzureHDInsightHttpServicesAccess](./Revoke-AzureHDInsightHttpServicesAccess.md)
Disables HTTP access to a cluster.


### [Revoke-AzureHDInsightRdpServicesAccess](./Revoke-AzureHDInsightRdpServicesAccess.md)
Disables RDP access to a cluster.


### [Set-AzureHDInsightClusterSize](./Set-AzureHDInsightClusterSize.md)
Sets the size of a specified cluster.


### [Set-AzureHDInsightDefaultStorage](./Set-AzureHDInsightDefaultStorage.md)
Sets the default storage account setting in a cluster configuration object.


### [Start-AzureHDInsightJob](./Start-AzureHDInsightJob.md)
Starts a given job on a cluster.


### [Stop-AzureHDInsightJob](./Stop-AzureHDInsightJob.md)
Stops a specified job on a cluster.


### [Use-AzureHDInsightCluster](./Use-AzureHDInsightCluster.md)
Selects a cluster to be used with the Invoke-AzureHDInsightHiveJob cmdlet


### [Wait-AzureHDInsightJob](./Wait-AzureHDInsightJob.md)
Waits for the completion or failure of a specified job and displays its progress



